--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
-    "expo": "~47.0.12",
-    "expo-font": "~11.0.1",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^54.0.29",
+    "expo-font": "~14.0.10",
+    "expo-status-bar": "~3.0.9",
     "phosphor-react-native": "^1.1.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@biomejs/biome": "^2.3.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^4.6.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
