--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@biomejs/biome": "^2.3.9",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.1",
     "typescript": "~5.9.2"
   },
   "private": true
